--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,4 +2,9 @@
 <resources>
 
 	<style name="Theme.BeFitOutfit" parent="android:Theme.Material.Light.NoActionBar" />
+
+	<style name="Theme.BeFitOutfit.SplashScreen" parent="Theme.SplashScreen">
+		<item name="postSplashScreenTheme">@style/Theme.BeFitOutfit</item>
+		<item name="windowSplashScreenAnimatedIcon">@drawable/ic_launcher_foreground</item>
+	</style>
 </resources>
