--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,20 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:aapt="http://schemas.android.com/aapt"
 	android:width="108dp"
 	android:height="108dp"
-	android:viewportWidth="108"
-	android:viewportHeight="108">
-	<path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-		<aapt:attr name="android:fillColor">
-			<gradient
-				android:endX="85.84757"
-				android:endY="92.4963"
-				android:startX="42.9492"
-				android:startY="49.59793"
-				android:type="linear">
-				<item
-					android:color="#44000000"
-					android:offset="0.0" />
-				<item
-					android:color="#00000000"
-					android:offset="1.0" />
-			</gradient>
-		</aapt:attr>
-	</path>
-	<path
-		android:fillColor="#FFFFFF"
-		android:fillType="nonZero"
-		android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-		android:strokeWidth="1"
-		android:strokeColor="#00000000" />
+	android:viewportWidth="1080"
+	android:viewportHeight="1080">
+	<group
+		android:scaleX="0.54"
+		android:scaleY="0.54"
+		android:translateX="248.4"
+		android:translateY="248.4">
+		<path
+			android:fillColor="#FFD184"
+			android:fillType="evenOdd"
+			android:pathData="M506.1,427.4L165.2,616.8C145.1,626.2 108.4,738.9 179.4,792C179.4,792 216.1,818.2 282.4,814.4C282.4,818.2 279.3,904.4 277.7,947L501.4,814.4H867.1C923.9,786 1003.2,674.8 867.1,581.3L570,423.9V361.1C500.6,319.3 430.4,247.5 499,203.7C515.4,193.2 580.2,196.6 587.8,258.2H650.5C653.7,228.6 637.5,161.7 577.1,142.2C500.2,117.3 412.6,138.6 402,244C402,311.9 464.9,354.5 498.6,377.3C501.3,379.1 503.8,380.8 506.1,382.4V427.4ZM223.1,635.8L526.1,471.9V471.3L526.7,471.6L527.3,471.3V471.9C547.7,482.7 826.3,630.3 846.8,642.9C868.2,655.9 884.7,716.3 835,745.9L526.1,745.9H481.1L339.1,829.9V745.9C339.1,745.9 248,754.1 223.1,743.5C198.2,732.8 162.5,677.4 223.1,635.8Z" />
+		<path
+			android:fillColor="#FF867B"
+			android:fillType="evenOdd"
+			android:pathData="M515,382.5L431.9,337.7V468L515.8,424.1C521.5,430.3 529.7,434.1 538.7,434.1C549.6,434.1 559.2,428.6 564.8,420.1V423.7L649.4,468V337.7L564.8,383.3V385.6C559.2,377.2 549.6,371.6 538.7,371.6C529.3,371.6 520.8,375.8 515,382.5Z" />
+	</group>
 </vector>
